--- a/music.html
+++ b/music.html
@@ -89,11 +89,7 @@
             <div class="tone-arm-head"></div>
         </div>
     </div>
-    <audio id="music">
-        <source src="your-music-file.mp3" type="audio/mpeg">
-        <source src="your-music-file.ogg" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
+    <audio id="music" src="M800004MJi1q0LJfmT.mp3"></audio>
     <button onclick="playMusic()">播放</button>
     <button onclick="pauseMusic()">暂停</button>
     <script>
